--- a/app/package.json
+++ b/app/package.json
@@ -1,85 +1,94 @@
 {
-  "name": "CRN",
-  "version": "1.0.1",
-  "description": "React JS web frontend for the CRN application.",
-  "license": "MIT",
-  "main": "app.js",
-  "repository": {
-    "type": "git"
-  },
-  "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js --progress --watch --color",
-    "build": "webpack --config webpack.prod.js",
-    "lint": "eslint src/scripts/ src/tests/",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
-  },
-  "author": "Squishymedia",
-  "dependencies": {
-    "async": "^1.2.1",
-    "babel-polyfill": "^6.6.1",
-    "bids-validator": "^0.23.2",
-    "bowser": "^1.7.3",
-    "bytes": "^2.3.0",
-    "favico.js": "git://github.com/ejci/favico.js#0.3.10",
-    "load-google-api": "^0.1.3",
-    "moment": "^2.10.3",
-    "pluralize": "^1.1.2",
-    "react": "0.14.9",
-    "react-bootstrap": "0.29.4",
-    "react-dom": "0.14.8",
-    "react-ga": "^2.2.0",
-    "react-input-autosize": "1.1.0",
-    "react-router": "^0.13.3",
-    "react-select": "^1.0.0-rc.5",
-    "reactable": "0.14.0",
-    "reflux": "^0.2.7",
-    "remarkable": "1.6.2",
-    "spark-md5": "^1.0.0",
-    "superagent": "3.6.0"
-  },
-  "devDependencies": {
-    "babel": "5.8.23",
-    "babel-jest": "^20.0.3",
-    "babel-loader": "^7.1.2",
-    "babel-minify-webpack-plugin": "^0.2.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.16",
-    "compression-webpack-plugin": "^1.0.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.7",
-    "enzyme": "^2.9.1",
-    "enzyme-to-json": "^1.5.1",
-    "eslint": "2.7.0",
-    "eslint-plugin-react": "^4.3.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^20.0.4",
-    "moment-timezone": "^0.5.13",
-    "node-sass": "^4.5.3",
-    "prettier": "^1.7.0",
-    "react-addons-test-utils": "0.14.8",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "watchify": "^2.4.0",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1",
-    "webpack-merge": "^4.1.0"
-  },
-  "jest": {
-    "setupFiles": [
-      "./jestsetup.js"
-    ],
-    "snapshotSerializers": [
-      "<rootDir>/node_modules/enzyme-to-json/serializer"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    "name": "CRN",
+    "version": "1.0.1",
+    "description": "React JS web frontend for the CRN application.",
+    "license": "MIT",
+    "main": "app.js",
+    "repository": {
+        "type": "git"
+    },
+    "scripts": {
+        "start":
+            "webpack-dev-server --config webpack.dev.js --progress --watch --color",
+        "build": "webpack --config webpack.prod.js",
+        "lint": "eslint src/scripts/ src/tests/",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "precommit": "lint-staged"
+    },
+    "author": "Squishymedia",
+    "dependencies": {
+        "async": "^1.2.1",
+        "babel-polyfill": "^6.6.1",
+        "bids-validator": "^0.23.2",
+        "bowser": "^1.7.3",
+        "bytes": "^2.3.0",
+        "favico.js": "git://github.com/ejci/favico.js#0.3.10",
+        "load-google-api": "^0.1.3",
+        "moment": "^2.10.3",
+        "pluralize": "^1.1.2",
+        "react": "0.14.9",
+        "react-bootstrap": "0.29.4",
+        "react-dom": "0.14.8",
+        "react-ga": "^2.2.0",
+        "react-input-autosize": "1.1.0",
+        "react-router": "^0.13.3",
+        "react-select": "^1.0.0-rc.5",
+        "reactable": "0.14.0",
+        "reflux": "^0.2.7",
+        "remarkable": "1.6.2",
+        "spark-md5": "^1.0.0",
+        "superagent": "^3.6.0"
+    },
+    "devDependencies": {
+        "babel": "5.8.23",
+        "babel-jest": "^20.0.3",
+        "babel-loader": "^7.1.2",
+        "babel-minify-webpack-plugin": "^0.2.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "clean-webpack-plugin": "^0.1.16",
+        "compression-webpack-plugin": "^1.0.0",
+        "copy-webpack-plugin": "^4.0.1",
+        "css-loader": "^0.28.7",
+        "enzyme": "^2.9.1",
+        "enzyme-to-json": "^1.5.1",
+        "eslint": "2.7.0",
+        "eslint-plugin-react": "^4.3.0",
+        "extract-text-webpack-plugin": "^3.0.0",
+        "file-loader": "^0.11.2",
+        "html-webpack-plugin": "^2.30.1",
+        "husky": "^0.14.3",
+        "jest": "^20.0.4",
+        "lint-staged": "^4.2.1",
+        "moment-timezone": "^0.5.13",
+        "node-sass": "^4.5.3",
+        "prettier": "^1.7.0",
+        "react-addons-test-utils": "0.14.8",
+        "sass-loader": "^6.0.6",
+        "style-loader": "^0.18.2",
+        "url-loader": "^0.5.9",
+        "watchify": "^2.4.0",
+        "webpack": "^3.5.5",
+        "webpack-dev-server": "^2.7.1",
+        "webpack-merge": "^4.1.0"
+    },
+    "jest": {
+        "setupFiles": ["./jestsetup.js"],
+        "snapshotSerializers": [
+            "<rootDir>/node_modules/enzyme-to-json/serializer"
+        ],
+        "moduleNameMapper": {
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+                "<rootDir>/__mocks__/fileMock.js",
+            "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+        }
+    },
+    "lint-staged": {
+        "gitDir": "../",
+        "linters": {
+            "*.{js,jsx,json}": ["prettier --write", "git add"]
+        }
     }
-  }
 }
