--- a/app/package.json
+++ b/app/package.json
@@ -58,6 +58,7 @@
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^20.0.4",
+    "moment-timezone": "^0.5.13",
     "node-sass": "^4.5.3",
     "react-addons-test-utils": "0.14.8",
     "sass-loader": "^6.0.6",
