--- a/app/package.json
+++ b/app/package.json
@@ -34,7 +34,7 @@
     "react-dom": "0.14.8",
     "react-ga": "^2.2.0",
     "react-input-autosize": "1.1.0",
-    "react-router": "^0.13.3",
+    "react-router": "4",
     "react-select": "^1.0.0-rc.5",
     "reactable": "0.14.0",
     "reflux": "^0.2.7",
@@ -48,6 +48,7 @@
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.2",
     "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -70,6 +71,7 @@
     "node-sass": "^4.5.3",
     "prettier": "^1.7.0",
     "react-addons-test-utils": "0.14.8",
+    "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
