--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crn-server",
-  "version": "1.0.2-rc.1",
+  "version": "1.0.2",
   "description": "",
   "license": "MIT",
   "main": "index.js",
