Run docker build after tests (to catch errors faster).

--- a/circle.yml
+++ b/circle.yml
@@ -8,12 +8,6 @@ machine:
       - ~/.cache/yarn
 
 dependencies:
-  pre:
-    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-    - docker build --pull -t openneuro/server server:
-      parallel: true
-    - docker build --pull -t openneuro/app app:
-      parallel: true
   override:
     - cd server && yarn
     - cd app && yarn
@@ -29,6 +23,12 @@ test:
     # Coverage
     - cd server && yarn run codecov
     - cd app && yarn run codecov
+  post:
+    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+    - docker build --pull -t openneuro/server server:
+      parallel: true
+    - docker build --pull -t openneuro/app app:
+      parallel: true
 
 deployment:
   dev:
