--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,10 +1,15 @@
 {
-  "plugins": ["transform-object-rest-spread"],
+  "plugins": [
+    "transform-object-rest-spread"
+  ],
   "presets": [
-    ["env", {
-      "targets": {
-        "node": "6.11"
+    [
+      "env",
+      {
+        "targets": {
+          "node": "current"
+        }
       }
-    }]
+    ]
   ]
 }
