--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "start": "node index.js",
     "test": "jest",
     "coverage": "jest --coverage",
-    "codecov": "jest --coverage && codecov",
+    "codecov": "codecov -F server",
     "precommit": "lint-staged"
   },
   "repository": {
