--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint src/scripts/",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "coverage": "jest --coverage",
     "codecov": "codecov -F app",
     "precommit": "lint-staged"
   },
