--- a/app/package.json
+++ b/app/package.json
@@ -29,15 +29,15 @@
     "load-google-api": "^0.1.3",
     "moment": "^2.10.3",
     "pluralize": "^1.1.2",
-    "react": "0.14.9",
+    "react": "15",
     "react-bootstrap": "0.29.4",
-    "react-dom": "0.14.8",
+    "react-dom": "15",
     "react-ga": "^2.2.0",
     "react-input-autosize": "1.1.0",
     "react-router": "4",
     "react-select": "^1.0.0-rc.5",
     "reactable": "0.14.0",
-    "reflux": "^0.2.7",
+    "reflux": "0.4.1",
     "remarkable": "1.6.2",
     "spark-md5": "^1.0.0",
     "superagent": "^3.6.0"
