--- a/app/package.json
+++ b/app/package.json
@@ -72,6 +72,7 @@
     "prettier": "^1.7.0",
     "react-addons-test-utils": "0.14.8",
     "react-router-dom": "^4.2.2",
+    "react-test-renderer": "15",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
