--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "load-google-api": "^0.1.3",
     "moment": "^2.10.3",
     "pluralize": "^1.1.2",
+    "prop-types": "^15.6.0",
     "react": "15",
     "react-bootstrap": "0.30.10",
     "react-dom": "15",
