--- a/app/package.json
+++ b/app/package.json
@@ -34,7 +34,6 @@
     "react-bootstrap": "0.31.3",
     "react-dom": "16",
     "react-ga": "^2.2.0",
-    "react-input-autosize": "1.1.0",
     "react-router": "4",
     "react-select": "^1.0.0-rc.5",
     "reactable": "0.14.0",
@@ -59,8 +58,9 @@
     "compression-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
-    "enzyme": "^2.9.1",
-    "enzyme-to-json": "^1.5.1",
+    "enzyme": "3",
+    "enzyme-adapter-react-16": "^1.0.1",
+    "enzyme-to-json": "3",
     "eslint": "3.x",
     "eslint-plugin-react": "^4.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -72,9 +72,9 @@
     "moment-timezone": "^0.5.13",
     "node-sass": "^4.5.3",
     "prettier": "^1.7.0",
-    "react-addons-test-utils": "0.14.8",
+    "react-addons-test-utils": "^15.6.2",
     "react-router-dom": "^4.2.2",
-    "react-test-renderer": "15",
+    "react-test-renderer": "^16.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
