--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,8 @@
     "request": "^2.63.0",
     "tar-fs": "^1.9.0",
     "underscore": "^1.8.3",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "xmldoc": "^1.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.0",
