--- a/server/package.json
+++ b/server/package.json
@@ -40,7 +40,8 @@
     "tar-fs": "^1.9.0",
     "underscore": "^1.8.3",
     "uuid": "^3.0.1",
-    "xmldoc": "^1.1.0"
+    "xmldoc": "^1.1.0",
+    "victory": "^0.23.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.0",
