--- a/app/package.json
+++ b/app/package.json
@@ -8,8 +8,7 @@
     "type": "git"
   },
   "scripts": {
-    "start":
-      "webpack-dev-server --config webpack.dev.js --progress --watch --color",
+    "start": "webpack-dev-server --config webpack.dev.js --progress --watch --color",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint --ext .jsx --ext .js src/scripts/",
     "test": "jest",
@@ -28,6 +27,7 @@
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
     "load-google-api": "^0.1.3",
     "moment": "^2.10.3",
+    "opbeat-react": "^3.4.0",
     "pluralize": "^1.1.2",
     "prop-types": "^15.6.0",
     "react": "16",
@@ -49,6 +49,7 @@
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.2",
     "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-plugin-add-react-displayname": "^0.0.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
@@ -84,11 +85,14 @@
     "webpack-merge": "^4.1.0"
   },
   "jest": {
-    "setupFiles": ["./jestsetup.js"],
-    "snapshotSerializers": ["<rootDir>/node_modules/enzyme-to-json/serializer"],
+    "setupFiles": [
+      "./jestsetup.js"
+    ],
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/enzyme-to-json/serializer"
+    ],
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
-        "<rootDir>/__mocks__/fileMock.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     },
     "collectCoverageFrom": [
@@ -101,7 +105,10 @@
   "lint-staged": {
     "gitDir": "../",
     "linters": {
-      "*.{js,jsx,json}": ["prettier --write", "git add"]
+      "*.{js,jsx,json}": [
+        "prettier --write",
+        "git add"
+      ]
     }
   }
 }
