--- a/app/.babelrc
+++ b/app/.babelrc
@@ -1,5 +1,5 @@
 {
-  "plugins": ["transform-object-rest-spread"],
+  "plugins": ["transform-object-rest-spread", "add-react-displayname"],
   "presets": [
     "react",
     [
