--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "remarkable": "1.6.2",
     "spark-md5": "^1.0.0",
     "superagent": "^3.6.0",
+    "url-search-params-polyfill": "^2.0.1",
     "urlite": "^1.2.8"
   },
   "devDependencies": {
