--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.10.3",
     "pluralize": "^1.1.2",
     "prop-types": "^15.6.0",
+    "raven-js": "^3.20.1",
     "react": "16",
     "react-bootstrap": "0.31.3",
     "react-dom": "16",
