--- a/app/package.json
+++ b/app/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-react": "^4.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "git-rev-sync": "^1.9.1",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "jest": "^20.0.4",
