--- a/circle.yml
+++ b/circle.yml
@@ -30,8 +30,8 @@ deployment:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker build --pull -t openneuro/server server
-      - docker build --pull -t openneuro/app app
+      - docker build --pull -t openneuro/server -f server/Dockerfile .
+      - docker build --pull -t openneuro/app -f app/Dockerfile .
       # Update latest tag
       - docker tag -f openneuro/server openneuro/server:latest
       - docker tag -f openneuro/app openneuro/app:latest
@@ -41,8 +41,8 @@ deployment:
     branch: /.*/
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker build --pull -t openneuro/server server
-      - docker build --pull -t openneuro/app app
+      - docker build --pull -t openneuro/server -f server/Dockerfile .
+      - docker build --pull -t openneuro/app -f app/Dockerfile .
       # Update latest tag
       - docker tag -f openneuro/server openneuro/server:$CIRCLE_BRANCH
       - docker tag -f openneuro/app openneuro/app:$CIRCLE_BRANCH
@@ -52,8 +52,8 @@ deployment:
     tag: /v.*/
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker build --pull -t openneuro/server server
-      - docker build --pull -t openneuro/app app
+      - docker build --pull -t openneuro/server -f server/Dockerfile .
+      - docker build --pull -t openneuro/app -f app/Dockerfile .
       - docker tag openneuro/server openneuro/server:$CIRCLE_TAG
       - docker tag openneuro/app openneuro/app:$CIRCLE_TAG
       - docker push openneuro/server:$CIRCLE_TAG
