--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+amqp==2.2.2
 appdirs==1.4.3
 asn1crypto==0.24.0
 astroid==1.6.3
 attrs==17.4.0
 autopep8==1.3.5
+billiard==3.5.0.3
 boto==2.48.0
+celery==4.1.0
 certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
@@ -26,6 +29,7 @@ jsmin==2.2.2
 keyring==12.0.1
 keyrings.alt==3.0
 lazy-object-proxy==1.3.1
+kombu==4.1.0
 lxml==4.2.1
 mccabe==0.6.1
 mock==2.0.0
@@ -45,6 +49,8 @@ pylint==1.8.4
 pytest==3.5.0
 pytest-cov==2.5.1
 python-mimeparse==1.6.0
+pytz==2018.4
+redis==2.10.6
 requests==2.18.4
 SecretStorage==2.3.1
 simplejson==3.13.2
@@ -52,4 +58,5 @@ six==1.11.0
 smmap2==2.0.3
 tqdm==4.23.0
 urllib3==1.22
+vine==1.1.4
 wrapt==1.10.11
