--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -24,7 +24,7 @@
     "babel-core": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bcrypt-nodejs": "^0.0.3",
-    "bids-validator": "^0.26.2",
+    "bids-validator": "^0.26.11",
     "body-parser": "^1.18.2",
     "cron": "^1.1.0",
     "draft-js": "^0.10.5",
@@ -50,7 +50,8 @@
     "react-dom": "^16.2.0",
     "redis": "^2.8.0",
     "request": "^2.83.0",
-    "s3-stream-download": "https://github.com/OpenNeuroOrg/s3-stream-download.git",
+    "s3-stream-download":
+      "https://github.com/OpenNeuroOrg/s3-stream-download.git",
     "superagent": "^3.8.2",
     "tar-fs": "^1.9.0",
     "underscore": "^1.8.3",
