--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -29,6 +29,7 @@
     "jszip": "^3.1.5",
     "load-google-api": "^0.1.3",
     "loadable-components": "^0.4.0",
+    "lodash.clonedeep": "^4.5.0",
     "moment": "^2.10.3",
     "openneuro-client": "^1.13.0",
     "pluralize": "^7.0.0",
