--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ attrs==17.4.0
 autopep8==1.3.5
 billiard==3.5.0.3
 boto==2.48.0
-celery==4.1.0
+celery==4.2.0rc3
 certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
