--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asn1crypto==0.24.0
 astroid==1.6.3
 attrs==17.4.0
 autopep8==1.3.5
+Babel==2.5.3
 billiard==3.5.0.3
 boto==2.48.0
 celery==4.1.0
@@ -16,9 +17,10 @@ cryptography==2.2.2
 datalad==0.9.3
 duecredit==0.6.3
 entrypoints==0.2.3
-falcon==1.4.1
 fakeredis==0.10.3
+falcon==1.4.1
 fasteners==0.14.1
+flower==0.9.2
 gevent==1.2.2
 gitdb2==2.0.3
 GitPython==2.1.9
@@ -31,8 +33,8 @@ isort==4.3.4
 jsmin==2.2.2
 keyring==12.0.1
 keyrings.alt==3.0
-lazy-object-proxy==1.3.1
 kombu==4.1.0
+lazy-object-proxy==1.3.1
 lxml==4.2.1
 mccabe==0.6.1
 mock==2.0.0
@@ -59,6 +61,7 @@ SecretStorage==2.3.1
 simplejson==3.13.2
 six==1.11.0
 smmap2==2.0.3
+tornado==5.0.2
 tqdm==4.23.0
 urllib3==1.22
 vine==1.1.4
