--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -33,6 +33,7 @@
     "express": "^4.13.3",
     "express-fileupload": "^0.1.4",
     "graphql": "^0.13.2",
+    "graphql-bigint": "^1.0.0",
     "graphql-iso-date": "^3.5.0",
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.21.0",
@@ -51,7 +52,8 @@
     "react-dom": "^16.2.0",
     "redis": "^2.8.0",
     "request": "^2.83.0",
-    "s3-stream-download": "https://github.com/OpenNeuroOrg/s3-stream-download.git",
+    "s3-stream-download":
+      "https://github.com/OpenNeuroOrg/s3-stream-download.git",
     "superagent": "^3.8.2",
     "tar-fs": "^1.9.0",
     "underscore": "^1.8.3",
