--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -69,6 +69,7 @@
     "babel-preset-env": "^1.6.0",
     "codecov": "^2.3.0",
     "eslint": "^4.18.1",
+    "ioredis-mock": "^3.8.1",
     "jest": "^22.4.3",
     "mongodb-memory-server": "^1.7.0",
     "supertest": "^3.0.0"
