--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -35,6 +35,7 @@
     "graphql": "^0.13.2",
     "graphql-bigint": "^1.0.0",
     "graphql-iso-date": "^3.5.0",
+    "graphql-redis-subscriptions": "^1.5.0",
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.21.0",
     "immutable": "^3.8.2",
@@ -54,6 +55,7 @@
     "request": "^2.83.0",
     "s3-stream-download":
       "https://github.com/OpenNeuroOrg/s3-stream-download.git",
+    "subscriptions-transport-ws": "^0.9.9",
     "superagent": "^3.8.2",
     "tar-fs": "^1.9.0",
     "underscore": "^1.8.3",
