--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -48,6 +48,7 @@
     "react-table": "^6.7.6",
     "reflux": "6.4.1",
     "remarkable": "1.7.1",
+    "semver": "^5.5.0",
     "serviceworker-webpack-plugin": "^0.2.3",
     "spark-md5": "^3.0.0",
     "stream-browserify": "^2.0.1",
