--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -16,6 +16,7 @@
   },
   "author": "Squishymedia",
   "dependencies": {
+    "apollo-link-ws": "^1.0.8",
     "async": "^2.6.0",
     "babel-runtime": "^6.26.0",
     "bids-validator": "^0.26.10",
@@ -52,6 +53,7 @@
     "serviceworker-webpack-plugin": "^0.2.3",
     "spark-md5": "^3.0.0",
     "stream-browserify": "^2.0.1",
+    "subscriptions-transport-ws": "^0.9.9",
     "superagent": "^3.6.0",
     "url-search-params-polyfill": "^2.0.1",
     "urlite": "^1.2.8",
