--- a/config.env.example
+++ b/config.env.example
@@ -60,3 +60,7 @@ DOI_URL=
 
 SENTRY_DSN=
 ENVIRONMENT=
+
+# client -----------------------------------------------------------------------
+
+ENABLE_ANALYSIS=true
